--- a/tools/default_config.json
+++ b/tools/default_config.json
@@ -1,5 +1,6 @@
 {
     "twitch_bot": "",
+    "twitch_client_id": "replace_me",
     "twitch_access_token": "replace_me",
     "exclude_names": ["streamelements", "nightbot"],
     "remove_unused_rooms_after_minutes": 360,
@@ -10,5 +11,6 @@
         "stance": "base",
         "animations":  ["Relax"],
         "position_x": 0.5
-    }
+    },
+    "admin_secret": ""
 }
