Add feature to save Rooms data to firestore upon start/destroy
This is to allow a smoother experience whenever I start/stop
the production server.

* Renamed twitchConfig to BotConfig
* set min and max animation speed to [0.1, 5.0]
* update !chibi help text to remove github link
* Add Save/Restore functionality to make releasing new images a smoother experience
* Remove RoomsManager runCh go function. We can just directly call go room.Run()
* Add a 'AddOperatorToRoom' method to Rooms struct
* Add Save/Restore methods to RoomsManager
* Add GoogleCloudProject fields to BotConfig used to connect to firestore
* Fix bug where username is being passed up to spine runtime instead of userNameDisplay

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ server/assets/enemies/
 server/assets/*.json
 server/spine-ts/build/*
 server/twitch_config.json
+server/bot_config.json
 server/config.json
 server/server_linux
 server/server_win386.exe
@@ -20,5 +21,6 @@ release/assets/
 
 irc_log.txt
 server/log.txt
+server/*.json
 SECRET.md
 TODO.md
