trying out postgres docker

--- a/Dockerfile.PROD
+++ b/Dockerfile.PROD
@@ -15,5 +15,5 @@ EXPOSE 8080
 
 # RUN
 ENV GOPATH=/work
-ENTRYPOINT ["/work/ak_chibi_bot", "-address=:8080", "-bot_config=/work/server/config.json"]
+ENTRYPOINT ["/work/ak_chibi_bot", "-address=:8080", "-image_assetdir=/ak_chibi_assets/assets", "-static_dir=/ak_chibi_assets/", "-bot_config=/work/server/config.json"]
 
