--- a/db/Dockerfile.PROD
+++ b/db/Dockerfile.PROD
@@ -1,6 +1,30 @@
-FROM postgres:latest
-# CMD ["postgres",                                                 \
-#     "-c", "ssl=on",                                              \
-#     "-c",  "ssl_cert_file=/etc/ssl/certs/ssl-cert-snakeoil.pem", \
-#     "-c",  "ssl_key_file=/etc/ssl/private/ssl-cert-snakeoil.key" \
-# ]
+FROM postgres:16.4
+
+ADD ./certs/fullchain.pem /var/lib/postgresql/fullchain.pem
+ADD ./certs/privkey.pem /var/lib/postgresql/privkey.pem
+RUN chown postgres:postgres /var/lib/postgresql/fullchain.pem
+RUN chown postgres:postgres /var/lib/postgresql/privkey.pem
+RUN chmod 600 /var/lib/postgresql/fullchain.pem
+RUN chmod 600 /var/lib/postgresql/privkey.pem
+
+COPY ./configs/pg_hba.conf /opt/postgres/pg_hba.conf
+COPY ./configs/postgresql.conf /opt/postgres/postgresql.conf
+COPY ./configs/50-hba.sh /docker-entrypoint-initdb.d/50-hba.sh
+RUN chown postgres:postgres /opt/postgres/pg_hba.conf
+RUN chown postgres:postgres /opt/postgres/postgresql.conf
+RUN chmod 600 /opt/postgres/pg_hba.conf
+RUN chmod 600 /opt/postgres/postgresql.conf
+
+CMD ["postgres"                                                    \
+    ,"-c", "config_file=/opt/postgres/postgresql.conf"             \
+]
+    #,"-c", "ssl=on"                                                 \
+    #,"-c", "ssl_cert_file=/var/lib/postgresql/fullchain.pem"       \
+    #,"-c", "ssl_key_file=/var/lib/postgresql/privkey.pem"        \
+    #,"-c", "ssl_cert_file=server.crt"       \
+    #,"-c", "ssl_key_file=server.key"       \ 
+    #,"-c", "ssl_cert_file=/var/lib/postgresql/fullchain.pem"       \
+    #,"-c", "ssl_key_file=/var/lib/postgresql/privkey.pem"        \
+#    ,"-c", "ssl_ca_file=/var/lib/postgresql/CertAuth.crt"         \
+#    ,"-c", "ssl_crl_file=/var/lib/postgresql/CertAuth.crl"           \
+#]
