--- a/db/configs/postgresql.conf
+++ b/db/configs/postgresql.conf
@@ -449,7 +449,13 @@ min_wal_size = 80MB
 #------------------------------------------------------------------------------
 
 # - Where to Log -
-
+log_destination = 'stderr'	
+logging_collector  = on
+log_directory = 'logs'
+log_statement = 'ddl'
+log_filename = 'postgresql-%a.log'
+log_rotation_size = 10MB
+log_truncate_on_rotation = on
 #log_destination = 'stderr'		# Valid values are combinations of
 					# stderr, csvlog, jsonlog, syslog, and
 					# eventlog, depending on platform.
@@ -549,6 +555,9 @@ min_wal_size = 80MB
 					# the interval in milliseconds.
 
 # - What to Log -
+
+log_connections = on
+log_disconnections = on
 
 #debug_print_parse = off
 #debug_print_rewritten = off
