--- a/compose.PROD.yaml
+++ b/compose.PROD.yaml
@@ -16,8 +16,24 @@ services:
     depends_on:
       db:
         condition: service_healthy
+      migrations:
+        condition: service_completed_successfully
     secrets:
       - web-user-password.txt
+
+  migrations:
+    image: migrate/migrate:4
+    volumes:
+      - ./db/migrations:/migrations
+    depends_on:
+      db:
+        condition: service_healthy
+    command:    [
+      "-database", "postgres://${MIGRATE_DB_USER}:${MIGRATE_DB_PASSWORD}@db:5432/akdb", 
+      "-path", "./migrations", 
+      "up" 
+    ]
+    env_file: .env
 
   db:
     image: ak-db:prod
