--- a/compose.DEV.yaml
+++ b/compose.DEV.yaml
@@ -3,7 +3,7 @@
 # docker compose -f compose.DEV.yaml logs
 name: ak-services
 services:
-  web:
+  bot:
     build:
       context: ./
       dockerfile: ./Dockerfile
