--- a/compose.PROD.yaml
+++ b/compose.PROD.yaml
@@ -4,7 +4,7 @@
 name: ak-services
 services:
   bot:
-    image: ak-chibi-bot:prod
+    image: stymphalian/ak-chibi-bot:prod
     ports:
       - "8080:8080"
     environment:
@@ -13,6 +13,7 @@ services:
       - DATABASE_HOST=db
       - DATABASE_PORT=5432
       - DATABASE_PASSWORD_FILE=/run/secrets/web-user-password.txt
+    restart: on-failure:3
     depends_on:
       db:
         condition: service_healthy
