Add feature to record spine-runtime canvas to video
* Migrate spine/** files to use es6 modules
* Add webpack and npm package management for spine source code
* Change spine static serving folder from 'build' to 'dist'

--- a/static/spine/tsconfig.json
+++ b/static/spine/tsconfig.json
@@ -1,13 +1,14 @@
 {
 	"compilerOptions": {
-		"module": "none",
+		"module": "es6",
+		"target": "ES2022",
 		"noImplicitAny": true,
 		"removeComments": true,
 		"preserveConstEnums": true,
-		"outFile": "build/spine-all.js",
+		"esModuleInterop": true,
+		"outDir": "dist",
 		"sourceMap": true,
-		"declaration": true,
-		"target": "ES2022",
+		"declaration": false
 	},
 	"include": [
 		"src/core/**/*",
@@ -17,6 +18,7 @@
 		"src/*",
 	],
 	"exclude": [
-		"build"
+		"build",
+		"dist"
 	]
 }
