--- a/static/web_app/package.json
+++ b/static/web_app/package.json
@@ -34,7 +34,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "watch": "npm-watch"
+    "watch": "npm-watch build"
   },
   "watch": {
     "build": {
