--- a/static/web_app/package.json
+++ b/static/web_app/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.111",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.7.7",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.3",
     "js-cookie": "^3.0.5",
