--- a/.air.toml
+++ b/.air.toml
@@ -7,7 +7,22 @@ tmp_dir = "tmp"
   bin = "tmp/main"
   cmd = "go build -o ./tmp/main server/main.go"
   delay = 10000
-  exclude_dir = ["assets", "tmp", "vendor", "testdata", "static/assets", "tools", "thirdparty", "static/spine", "static/rooms", "static/admin", "web_app", "static/web_app", "static/public/test_csrf"]
+  exclude_dir = [
+    "assets", 
+    "tmp", 
+    "vendor", 
+    "testdata", 
+    "static/assets", 
+    "tools", 
+    "thirdparty", 
+    "static/spine", 
+    "static/rooms", 
+    "static/admin", 
+    "web_app", 
+    "static/web_app", 
+    "static/public/test_csrf",
+    "server/tools",
+  ]
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = true
