--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ server/server_win386.exe
 server/*.exe
 static/public/test_csrf
 static/spine/dist/
-static/web_app/build/
+static/web_app/build/*
 
 db/certs/
 
