--- a/static/spine/package.json
+++ b/static/spine/package.json
@@ -8,7 +8,8 @@
   },
   "private": true,
   "dependencies": {
-    "gif.js": "^0.2.0"
+    "gif.js": "^0.2.0",
+    "webgl-memory": "^1.1.2"
   },
   "watch": {
     "build": {
